# MQSolver_Sunway

./: .gitignore  CMakeLists.txt  challenge-1-74-0  mq4-67-0-f.txt  mqmisc.cpp  mqparam.h  sample.cpp  testSolve67.cpp  testSolve74.cpp
SolveType1/: challenge-1-74-0-resident  testSolve74.cpp
SolveType1_72/: challenge-1-72-1  main.cpp  main.h  mq-resident1-72-1.txt
SolveType4/: gf2misc.cpp  gf2misc.h  main.cpp  mq-resident4-67-0.txt  mq-resident4-67-1.txt  mqmisc.h  testSolve67.cpp
SolveType4_55/: main.cpp  mq-resident-55.txt  mq-resident4-55-0.txt  mq-resident4-55-1.txt  mq4-55-0-f.txt  mq4-55-1-f.txt  mq_random55
SolveType4_55_avx512/: main.cpp
SolveType4_55_x86/: main.cpp
SolveType4_56/: main.cpp  mq-resident4-56-2.txt  mq4-56-2-f.txt
SolveType4_57/: main.cpp  mq-resident4-57-2.txt  mq4-57-2-f.txt
SolveType4_58/: main.cpp  mq-resident4-58-2.txt  mq4-58-2-f.txt
SolveType4_59/: main.cpp  mq-resident4-59-2.txt  mq4-59-2-f.txt
SolveType4_64/: main.cpp  mq-resident4-64-1.txt  mq4-64-1-f.txt
SolveType4_64_avx512/: main.cpp
SolveType4_68/: main.cpp
